# CPP_TEMPLATE

./: .gitignore  CMakeLists.txt  Makefile  README.md  shell.nix
src/: main.cpp
